--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,3 +14,4 @@ onlyBuiltDependencies:
 overrides:
   axios@=1.10.0: '>=1.11.0'
   hono@>=4.8.0 <4.9.6: '>=4.9.6'
+  jsondiffpatch@<0.7.2: '>=0.7.2'
